--- a/src/test/SpecRunner.html
+++ b/src/test/SpecRunner.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Mimcss Tests</title>
 
-  <!-- Jasmin standalon should be installed under "../../../../3rdparty/jasmin" relative to this file -->
+  <!-- Jasmin standalone should be installed under "../../../../3rdparty/jasmin" relative to this file -->
   <link rel="shortcut icon" type="image/png" href="../../../../3rdparty/jasmin/lib/jasmine-3.5.0/jasmine_favicon.png">
   <link rel="stylesheet" href="../../../../3rdparty/jasmin/lib/jasmine-3.5.0/jasmine.css">
 
