--- a/src/test/SpecRunner.html
+++ b/src/test/SpecRunner.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8">
   <title>Mimcss Tests</title>
 
-  <!-- Jasmin standalone should be installed under "../../../../3rdparty/jasmin" relative to this file -->
-  <link rel="shortcut icon" type="image/png" href="../../../../3rdparty/jasmin/lib/jasmine-3.5.0/jasmine_favicon.png">
-  <link rel="stylesheet" href="../../../../3rdparty/jasmin/lib/jasmine-3.5.0/jasmine.css">
+  <!-- Jasmin files should be copied to "../../lib" relative to this file -->
+  <link rel="shortcut icon" type="image/png" href="../../lib/jasmine_favicon.png">
+  <link rel="stylesheet" href="../../lib/jasmine.css">
 
-  <script src="../../../../3rdparty/jasmin/lib/jasmine-3.5.0/jasmine.js"></script>
-  <script src="../../../../3rdparty/jasmin/lib/jasmine-3.5.0/jasmine-html.js"></script>
-  <script src="../../../../3rdparty/jasmin/lib/jasmine-3.5.0/boot.js"></script>
+  <script src="../../lib/jasmine.js"></script>
+  <script src="../../lib/jasmine-html.js"></script>
+  <script src="../../lib/boot.js"></script>
 
   <script src="../../lib/mimcss.tests.dev.js"></script>
 
