--- a/web/typedoc.html
+++ b/web/typedoc.html
@@ -5,7 +5,7 @@ rootpath: "."
 ---
 
 <div class="typedoc-reference">
-    <iframe id="typedocRef" style="width:100%; height:100%; border-style: none;"></iframe>
+    <iframe id="referenceFrame" style="width:100%; height:100%; border-style: none;"></iframe>
 </div>
 
 <script>
@@ -15,5 +15,5 @@ rootpath: "."
         let params = new URLSearchParams(location.search);
         path = params.get("path");
     }
-    typedocRef.src = `reference/${path}${location.hash}`
+    referenceFrame.src = `reference/${path}${location.hash}`
 </script>
